--- a/css/nfSlidePuzzle.css
+++ b/css/nfSlidePuzzle.css
@@ -34,6 +34,11 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   clear: both;
   height: 100%;
   margin: 0px;
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 
